-added the Updated CV

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								<p>Hello there! I’m a Software Engineer and Graphic Designer passionate about creating digital experiences that are both visually striking and technically seamless. I blend creative design thinking with clean, efficient code to build products that are intuitive, responsive, and user-centered.</p>
 								<p>From wireframes and prototypes to fully developed interactive websites and applications, I focus on designing and building with purpose and precision. My process is simple: understand the user, design intentionally, and implement thoughtfully. I’m always exploring new tools, frameworks, and design trends to enhance both the aesthetic and functionality of my work.</p>
 								<p>Beyond coding and design, I value clarity, problem-solving, and innovation. Whether it’s crafting a smooth user journey or developing scalable, high-performance interfaces, I’m committed to creating digital solutions that leave a lasting impact.</p>
-								<a class="about__cta" href="pics/new%20CV.pdf" download>
+								<a class="about__cta" href="pics/Christina%20Perera%20-%20CV.pdf" download>
 									<span class="about__cta-icon" aria-hidden="true">
 										<svg viewBox="0 0 24 24" role="presentation">
 											<path d="M12 3v12" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
@@ -362,7 +362,7 @@
 								</div>
 							</form>
 							<div class="contact__footer">
-								<a class="about__cta" href="pics/new%20CV.pdf" download>Download CV</a>
+								<a class="about__cta" href="pics/Christina%20Perera%20-%20CV.pdf" download>Download CV</a>
 							</div>
 						</div>
 					</section>
